fix: alt decsription to quiz page, adjust headers and text align.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,6 +274,10 @@ li {
     text-align: right;
 }
 
+.text-left {
+    text-align: left !important;
+}
+
 .myquiz {
     padding: 20px 0;
 }
